force-app/main/default/objects/sugati__Rooming_Preference__c/sugati__Rooming_Preference__c.object-meta.xml
<CustomObject>
    <label>Grouping Preference</label>
    <nameField>
        <displayFormat>RP-{0000000}</displayFormat>
        <label>Grouping Preference Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grouping Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>