force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the default option ie all group members in the same room / vehicle?</description>
    <inlineHelpText>Is this the default option ie all group members in the same room / vehicle?</inlineHelpText>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>