force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Date__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Date__c</fullName>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>