force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>