force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Number_of_Children__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Number_of_Children__c</fullName>
    <label>Number of Children</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>