force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Number_of_Infants__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Number_of_Infants__c</fullName>
    <label>Number of Infants</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>