force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Room_Number__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Room_Number__c</fullName>
    <label>Group Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>