force-app/main/default/objects/sugati__Rooming_Preference__c/fields/sugati__S_RP_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_RP_Type__c</fullName>
    <description>Is this preference for accommodation or transfer?</description>
    <inlineHelpText>Is this preference for accommodation or transfer?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
                <default>true</default>
                <label>Accommodation</label>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>